# GEMM_Plus

./: CMakeLists.txt  README.md  kernel_generator.py  kernel_generator_depthwise.py  kernel_generator_reordered.py  kernel_generator_reordered_ci3.py  main.cpp
include/: CMakeLists.txt  direct18.cpp  miniTensor.cpp  ptmm.cpp  ptmm.h  ptmm_kernels_wf3.h
